Bluetooth: mac: When a characteristic is written, a gatt characteristic value changed notification is send. This notification should not be sent since.

BUG=647500

Review-Url: https://codereview.chromium.org/2357993002
Cr-Commit-Position: refs/heads/master@{#423337}

Former-commit-id: 0405e3b684cf2cddeadacbe13c035a3eb0bdd80d